--- a/Wijesiri.Motors.WebApp/src/app/shared/default-layout/default-layout.component.html
+++ b/Wijesiri.Motors.WebApp/src/app/shared/default-layout/default-layout.component.html
@@ -1,6 +1,6 @@
 <app-header
   [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/brand/logo.svg', width: 89, height: 25, alt: 'CoreUI Logo'}"
+  [navbarBrandFull]="{src: 'assets/img/brand/images.svg', width: 130, height: 55, alt: 'CoreUI Logo'}"
   [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
   [sidebarToggler]="'lg'"
   [asideMenuToggler]="'lg'">
@@ -323,6 +323,6 @@
   </app-aside> -->
 </div>
 <app-footer>
-  <span><a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span>
-  <span class="ml-auto">Powered by <a href="https://coreui.io/angular">CoreUI for Angular</a></span>
+  <!-- <span><a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span> -->
+  <span class="ml-auto">Powered by <a href="https://www.facebook.com/raravindu">Ravindu</a> &copy; 2018 </span>
 </app-footer>
