--- a/Wijesiri.Motors.WebApp/src/app/shared/components/default-layout/default-layout.component.html
+++ b/Wijesiri.Motors.WebApp/src/app/shared/components/default-layout/default-layout.component.html
@@ -1,11 +1,8 @@
-<app-header
-  [fixed]="true"
-  [navbarBrandFull]="{src: 'assets/img/brand/images.svg', width: 130, height: 55, alt: 'CoreUI Logo'}"
-  [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}"
-  [sidebarToggler]="'lg'"
+<app-header [fixed]="true" [navbarBrandFull]="{src: 'assets/img/brand/images.svg', width: 130, height: 55, alt: 'CoreUI Logo'}"
+  [navbarBrandMinimized]="{src: 'assets/img/brand/sygnet.svg', width: 30, height: 30, alt: 'CoreUI Logo'}" [sidebarToggler]="'lg'"
   [asideMenuToggler]="'lg'">
   <ul class="nav navbar-nav d-md-down-none">
-  <!--   <li class="nav-item px-3">
+    <!--   <li class="nav-item px-3">
       <a class="nav-link" href="#">Dashboard</a>
     </li>
     <li class="nav-item px-3">
@@ -16,7 +13,13 @@
     </li> -->
   </ul>
   <ul class="nav navbar-nav ml-auto">
-<!--     <li class="nav-item d-md-down-none">
+    <li class="d-flex align-items-center">
+      <a class="nav-link d-flex align-items-center" role="button" (click)="changeLanguage()" aria-haspopup="true" aria-expanded="false">
+        <span class="flag-icon flag-icon-{{lang.id}}" title="{{lang.title}}" id="{{lang.id}"></span>
+        <small class="pl-1">{{lang.title}}</small>
+      </a>
+    </li>
+    <!--     <li class="nav-item d-md-down-none">
       <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
     </li>
     <li class="nav-item d-md-down-none">
@@ -58,7 +61,7 @@
     <ol class="breadcrumb">
       <app-breadcrumb></app-breadcrumb>
       <!-- Breadcrumb Menu-->
-  <!--     <li class="breadcrumb-menu d-md-down-none">
+      <!--     <li class="breadcrumb-menu d-md-down-none">
         <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
           <a class="btn" href="#"><i class="icon-speech"></i></a>
           <a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>
@@ -68,9 +71,10 @@
     </ol>
     <div class="container-fluid">
       <router-outlet></router-outlet>
-    </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.container-fluid -->
   </main>
-<!--   <app-aside [fixed]="true" [display]="false">
+  <!--   <app-aside [fixed]="true" [display]="false">
     <tabset>
       <tab>
         <ng-template tabHeading><i class="icon-list"></i></ng-template>
@@ -324,5 +328,6 @@
 </div>
 <app-footer>
   <!-- <span><a href="https://coreui.io">CoreUI</a> &copy; 2018 creativeLabs.</span> -->
-  <span class="ml-auto">Powered by <a href="https://www.facebook.com/raravindu">Ravindu</a> &copy; 2018 </span>
+  <span class="ml-auto">Powered by
+    <a href="https://www.facebook.com/raravindu">Ravindu</a> &copy; 2018 </span>
 </app-footer>
