--- a/Wijesiri.Motors.WebApp/src/app/modules/customer/create-customer/create-customer.component.html
+++ b/Wijesiri.Motors.WebApp/src/app/modules/customer/create-customer/create-customer.component.html
@@ -1,1 +1,54 @@
-<p>create-customer-works!!!</p>
+<div class="animated fadeIn">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">
+                    <strong>Horizontal</strong> Form </div>
+                <div class="card-body">
+                    <form class="example-form">
+                        <mat-form-field class="example-full-width">
+                            <input matInput placeholder="Favorite food" value="Sushi">
+                        </mat-form-field>
+
+                        <mat-form-field class="example-full-width">
+                            <textarea matInput placeholder="Leave a comment"></textarea>
+                        </mat-form-field>
+                    </form>
+                    <!--    <form class="form-horizontal ng-untouched ng-pristine ng-valid" novalidate (ngSubmit)="saveCustomer()" [formGroup]="createCustomerForm" enctype="multipart/form-data">
+                     
+                        <div class="form-group row">
+                            <label class="col-md-3 col-form-label" for="hf-email">Email</label>
+                            <div class="col-md-9">
+                                <input class="form-control" id="hf-email" name="hf-email" placeholder="Enter Email.." type="email">
+                                <span class="help-block">Please enter your email</span>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-md-3 col-form-label" for="hf-password">Password</label>
+                            <div class="col-md-9">
+                                <input class="form-control" id="hf-password" name="hf-password" placeholder="Enter Password.." type="password">
+                                <span class="help-block">Please enter your password</span>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="form-group" [ngClass]="{'has-error': displayMessage.firstName }">
+                                <mat-form-field>
+                                    <input matInput id="firstName" placeholder="{{ 'LOGIN.USERNAME' | translate }}" formControlName="firstName">
+                                    <mat-error *ngIf="displayMessage.firstName">
+                                        {{displayMessage.firstName}}
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                        </div>
+                    </form> -->
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-sm btn-primary" type="submit">
+                        <i class="fa fa-dot-circle-o"></i> Submit</button>
+                    <button class="btn btn-sm btn-danger" type="reset">
+                        <i class="fa fa-ban"></i> Reset</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
