--- a/Wijesiri.Motors.WebApp/src/app/modules/vehicle/create-vehicle/create-vehicle.component.html
+++ b/Wijesiri.Motors.WebApp/src/app/modules/vehicle/create-vehicle/create-vehicle.component.html
@@ -1,3 +1,92 @@
-<p>
-  create-vehicle works!
-</p>
+<div class="panel">
+    <mat-toolbar>
+        <span class="mat-toolbar-title">{{pageTitle}}</span>
+    </mat-toolbar>
+
+    <div class="panel-body">
+        <form class="form-horizontal" novalidate (ngSubmit)="saveVehicle()" [formGroup]="createVehicleForm" enctype="multipart/form-data">
+            <fieldset>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group" [ngClass]="{'has-error': displayMessage.regNo }">
+                            <mat-form-field>
+                                <input matInput id="regNo" placeholder="{{ 'VEHICLE.ADD_NEW.LBL_REGNO' | translate }}" formControlName="regNo">
+                                <mat-error *ngIf="displayMessage.regNo">
+                                    {{displayMessage.regNo}}
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group" [ngClass]="{'has-error': displayMessage.make }">
+                            <mat-form-field>
+                                <input matInput type="text" formControlName="make" placeholder="{{ 'VEHICLE.ADD_NEW.LBL_MAKE' | translate }}" [matAutocomplete]="auto">
+                                <mat-autocomplete #auto="matAutocomplete">
+                                    <mat-option *ngFor="let make of makers" [value]="make">
+                                        {{make}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                                <mat-error *ngIf="displayMessage.make">
+                                    {{displayMessage.make}}
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group" [ngClass]="{'has-error': displayMessage.model }">
+                            <mat-form-field>
+                                <input matInput id="model" placeholder="{{ 'VEHICLE.ADD_NEW.LBL_MODEL' | translate }}" formControlName="model">
+                                <mat-error *ngIf="displayMessage.model">
+                                    {{displayMessage.model}}
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group" [ngClass]="{'has-error': displayMessage.type }">
+                            <mat-form-field>
+                                <input matInput type="text" formControlName="type" placeholder="{{ 'VEHICLE.ADD_NEW.LBL_TYPE' | translate }}" [matAutocomplete]="auto">
+                                <mat-autocomplete #auto="matAutocomplete">
+                                    <mat-option *ngFor="let type of types" [value]="type">
+                                        {{type}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                                <mat-error *ngIf="displayMessage.type">
+                                    {{displayMessage.type}}
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group" [ngClass]="{'has-error': displayMessage.year }">
+                            <mat-form-field>
+                                <input matInput type="text" formControlName="year" placeholder="{{ 'VEHICLE.ADD_NEW.LBL_YEAR' | translate }}" [matAutocomplete]="auto">
+                                <mat-autocomplete #auto="matAutocomplete">
+                                    <mat-option *ngFor="let year of years" [value]="year">
+                                        {{year}}
+                                    </mat-option>
+                                </mat-autocomplete>
+                                <mat-error *ngIf="displayMessage.year">
+                                    {{displayMessage.year}}
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <button mat-raised-button type="submit" [disabled]='!createVehicleForm.valid' color="primary"> {{ 'VEHICLE.ADD_NEW.BTN_SAVE' | translate }}</button>
+                    <button mat-raised-button type="button" (click)="cancelClick()"> {{ 'VEHICLE.ADD_NEW.BTN_CANCEL' | translate }}</button>
+                </div>
+            </fieldset>
+        </form>
+        <div class='has-error' *ngIf='errorMessage'>{{errorMessage}}</div>
+    </div>
+</div>
